maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:40: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^PledgeMaze:40: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return false
    ^PledgeMaze:43: error: not found: value c
    while(c!=0){
          ^PledgeMaze:44: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^PledgeMaze:44: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return true
    ^